--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
-			<h1>YOUR NAME</h1>
+			<h1>Vaibhav V</h1>
 			<hr>
 			YOUR TITLE
 			<hr>
@@ -20,15 +20,15 @@
 					<!-- contact info including social media -->
                     <p>
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <a href="mailto:your-email@example.com">your-email@example.com</a>
+                        <a href="mailto:your-email@example.com">vaibhavagdale@gmail.com</a>
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="github.com/gh-username">gh-username</a>
+                        <a href="github.com/gh-username">Vaibhav_v</a>
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="linkedin.com/linkedin-username">linkedin-username</a>
+                        <a href="linkedin.com/linkedin-username">Vaibhav Vaghdale</a>
                     </p>
 				</section>
 				<section>
@@ -41,10 +41,10 @@
 					<!-- your education -->
                     <h3>YOUR MAJOR</h3>
                     <p>
-                        Your university or school
+                        Presidency University 
                     </p>
                     <p>
-                        2018-2022
+                        2018-2020
                     </p>
 				</section>            
 			</article>
@@ -55,11 +55,11 @@
 					<p>A brief paragraph about you and what kind of company you want to work for.</p>
 				</section>
 				<section>
-					<h2>WORK EXPERIENCE</h2>
+					<h2>Three years</h2>
 					<!-- your work experience -->
                     <h3>JOB TITLE</h3>
                     <p>
-                            Company Name | 2008 - 2010
+                            Infosys | 2021 - 2024
                     </p>
                     <p>
                             Describe what you did in this position with one summary sentence and no more than 3 bullet points with specific highlights
