--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 					<p>A brief paragraph about you and what kind of company you want to work for.</p>
 				</section>
 				<section>
-					<h2>Three years</h2>
-					<!-- your work experience -->
+					<h2>Experience</h2>
+					<!-- Three years -->
                     <h3>JOB TITLE</h3>
                     <p>
                             Infosys | 2021 - 2024
