--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<article id="mainLeft">
 				<section>
 					<h2>CONTACT</h2>
+					<p>8050038997</p>
 					<!-- contact info including social media -->
                     <p>
                         <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -38,6 +39,7 @@
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
+					<p>Three Years</p>
 					<!-- your education -->
                     <h3>YOUR MAJOR</h3>
                     <p>
@@ -56,7 +58,7 @@
 				</section>
 				<section>
 					<h2>Experience</h2>
-					<!-- Three years -->
+					<p>Three Years</p>
                     <h3>JOB TITLE</h3>
                     <p>
                             Infosys | 2021 - 2024
